--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -160,3 +160,16 @@ img.medium {
 .error {
   color: #a72c2c;
 }
+.alert {
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border: 0.5rem;
+}
+.alert-info {
+  color: #2020a0;
+  background-color: #e0e0ff;
+}
+.alert-danger {
+  color: #a02020;
+  background-color: #ffe0e0e0;
+}
