--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -105,6 +105,15 @@ a.brand {
   font-size: 3rem;
   font-weight: bold;
 }
+.badge {
+  background-color: rgb(70, 7, 7);
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
