--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -198,3 +198,19 @@ img.medium {
   color: #a02020;
   background-color: #ffe0e0e0;
 }
+
+/* form */
+
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.form label {
+  margin: 1rem 0;
+  display: block;
+}
