order history page created

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,6 +94,9 @@ button.primary {
 button.block {
   width: 100%;
 }
+button.small {
+  font-size: 1.2rem;
+}
 
 /* Header */
 header a {
@@ -256,4 +259,22 @@ img.medium {
 .checkout-steps > div.active {
   border-top-color: #b47732;
   color: #b47732;
+}
+
+/* table  */
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.table tbody tr:nth-of-type(odd) {
+  background-color: #f4f4f4;
+}
+.table td,
+.table th {
+  text-align: left;
+  border: 0.2rem solid #e4e4e4;
+  padding: 0.5rem;
+}
+.table button {
+  margin: 0 0.2rem;
 }
